25春第一次提交

--- a/function_call/function-call-based-on-langchain.ipynb
+++ b/function_call/function-call-based-on-langchain.ipynb
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
    "source": [
     "!pip install langchain openai langchain-openai --upgrade --quiet"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-16T14:45:57.422364Z",
-     "start_time": "2024-03-16T14:45:45.511915Z"
+     "end_time": "2024-07-20T01:58:39.085779Z",
+     "start_time": "2024-07-20T01:58:37.063809Z"
     }
    },
-   "id": "5c5c058f6e2dc05a"
+   "id": "5c5c058f6e2dc05a",
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -38,46 +38,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 三选一 加载OPENAI_API_KEY\n",
     "\n",
     "# 本地运行，包含.env文件\n",
-    "# from dotenv import load_dotenv\n",
-    "# load_dotenv()\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "\n",
     "# 本地运行，不包含.env文件\n",
     "# import os\n",
     "# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\n",
     "\n",
     "# google colab运行，需要配置secret key\n",
-    "import os\n",
-    "from google.colab import userdata\n",
-    "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
+    "# import os\n",
+    "# from google.colab import userdata\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-16T14:45:57.479952Z",
-     "start_time": "2024-03-16T14:45:57.433671Z"
+     "end_time": "2024-07-20T01:58:41.128850Z",
+     "start_time": "2024-07-20T01:58:41.115987Z"
     }
    },
-   "id": "e698bd119fa6fbad"
+   "id": "e698bd119fa6fbad",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.schema import HumanMessage, AIMessage, ChatMessage\n",
@@ -87,16 +87,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:16:31.396950Z",
-     "start_time": "2024-03-19T01:16:28.791955Z"
+     "end_time": "2024-07-20T01:58:43.929294Z",
+     "start_time": "2024-07-20T01:58:43.428492Z"
     }
    },
-   "id": "ade5715506481fcd"
+   "id": "ade5715506481fcd",
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
    "source": [
     "model = 'gpt-3.5-turbo-0613'\n",
     "llm = ChatOpenAI(model=model)"
@@ -104,11 +104,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:16:36.535636Z",
-     "start_time": "2024-03-19T01:16:34.775978Z"
+     "end_time": "2024-07-20T01:58:45.780176Z",
+     "start_time": "2024-07-20T01:58:45.689009Z"
     }
    },
-   "id": "b9662d1c4ce970e3"
+   "id": "b9662d1c4ce970e3",
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -132,17 +134,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[{'name': 'youtube_search',\n  'description': 'search for youtube videos associated with a person. the input to this tool should be a comma separated list, the first part contains a person name and the second a number that is the maximum number of video results to return aka num_results. the second part is optional',\n  'parameters': {'properties': {'__arg1': {'title': '__arg1',\n     'type': 'string'}},\n   'required': ['__arg1'],\n   'type': 'object'}}]"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "tools = [YouTubeSearchTool()]\n",
     "functions = [convert_to_openai_function(t) for t in tools]\n",
@@ -151,25 +142,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:16:44.296116Z",
-     "start_time": "2024-03-19T01:16:43.486891Z"
+     "end_time": "2024-07-20T01:58:51.165612Z",
+     "start_time": "2024-07-20T01:58:51.109166Z"
     }
    },
-   "id": "bd6c1841299cc235"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "id": "bd6c1841299cc235",
    "outputs": [
     {
      "data": {
-      "text/plain": "AIMessage(content='', additional_kwargs={'function_call': {'arguments': '{\\n  \"__arg1\": \"OpenAI\"\\n}', 'name': 'youtube_search'}}, response_metadata={'finish_reason': 'function_call', 'logprobs': None})"
+      "text/plain": [
+       "[{'name': 'youtube_search',\n",
+       "  'description': 'search for youtube videos associated with a person. the input to this tool should be a comma separated list, the first part contains a person name and the second a number that is the maximum number of video results to return aka num_results. the second part is optional',\n",
+       "  'parameters': {'type': 'object',\n",
+       "   'properties': {'query': {'type': 'string'}},\n",
+       "   'required': ['query']}}]"
+      ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
    "source": [
     "message = llm.invoke([HumanMessage(content='search videos in the topic of OpenAI on Youtube')], functions=functions)\n",
     "message"
@@ -177,11 +174,24 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:17:18.300830Z",
-     "start_time": "2024-03-19T01:17:16.118574Z"
+     "end_time": "2024-07-20T01:59:01.658692Z",
+     "start_time": "2024-07-20T01:59:00.502225Z"
     }
    },
-   "id": "53bee6bd758eb4e2"
+   "id": "53bee6bd758eb4e2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='', additional_kwargs={'function_call': {'arguments': '{\"query\":\"OpenAI\"}', 'name': 'youtube_search'}}, response_metadata={'token_usage': {'completion_tokens': 15, 'prompt_tokens': 101, 'total_tokens': 116}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'function_call', 'logprobs': None}, id='run-66d2f5ed-6ae0-4c93-b2cf-6096014313b2-0', usage_metadata={'input_tokens': 101, 'output_tokens': 15, 'total_tokens': 116})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -195,8 +205,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [],
    "source": [
     "function_descriptions = [\n",
     "    {\n",
@@ -246,16 +254,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:20:20.083648Z",
-     "start_time": "2024-03-19T01:20:20.035857Z"
+     "end_time": "2024-07-20T01:59:08.693567Z",
+     "start_time": "2024-07-20T01:59:08.689888Z"
     }
    },
-   "id": "d9f68a8e76dcd56f"
+   "id": "d9f68a8e76dcd56f",
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
    "source": [
     "question = \"\"\"\n",
     "I have a string as follows:\n",
@@ -270,16 +278,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:20:21.899550Z",
-     "start_time": "2024-03-19T01:20:21.848505Z"
+     "end_time": "2024-07-20T01:59:10.240347Z",
+     "start_time": "2024-07-20T01:59:10.237947Z"
     }
    },
-   "id": "a22315440ab812da"
+   "id": "a22315440ab812da",
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [],
    "source": [
     "import inspect\n",
     "\n",
@@ -304,16 +312,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:20:22.713714Z",
-     "start_time": "2024-03-19T01:20:22.667797Z"
+     "end_time": "2024-07-20T01:59:11.861377Z",
+     "start_time": "2024-07-20T01:59:11.859150Z"
     }
    },
-   "id": "9ecb63fb0778b269"
+   "id": "9ecb63fb0778b269",
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [],
    "source": [
     "def remove_word_from_string(string, index):\n",
     "    words = string.split()\n",
@@ -332,25 +340,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:20:25.036577Z",
-     "start_time": "2024-03-19T01:20:24.990120Z"
+     "end_time": "2024-07-20T01:59:13.822424Z",
+     "start_time": "2024-07-20T01:59:13.819142Z"
     }
    },
-   "id": "b193bfb5330fa2c8"
+   "id": "b193bfb5330fa2c8",
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "AIMessage(content='', additional_kwargs={'function_call': {'arguments': '{\\n  \"string\": \"black yellow red blue green\",\\n  \"index\": 2\\n}', 'name': 'remove_word_from_string'}}, response_metadata={'finish_reason': 'function_call', 'logprobs': None})"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "first_response = llm.invoke([HumanMessage(content=question)], functions=function_descriptions)\n",
     "first_response"
@@ -358,25 +357,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:20:29.430298Z",
-     "start_time": "2024-03-19T01:20:27.430795Z"
+     "end_time": "2024-07-20T01:59:16.497306Z",
+     "start_time": "2024-07-20T01:59:15.256859Z"
     }
    },
-   "id": "7d8f1593a9d1124a"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "id": "7d8f1593a9d1124a",
    "outputs": [
     {
      "data": {
-      "text/plain": "'black yellow blue green'"
+      "text/plain": [
+       "AIMessage(content='', additional_kwargs={'function_call': {'arguments': '{\"index\":2,\"string\":\"black yellow red blue green\"}', 'name': 'remove_word_from_string'}}, response_metadata={'token_usage': {'completion_tokens': 24, 'prompt_tokens': 172, 'total_tokens': 196}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'function_call', 'logprobs': None}, id='run-e2e5f17a-004d-4cd8-9dc3-39ddf5d5812b-0', usage_metadata={'input_tokens': 172, 'output_tokens': 24, 'total_tokens': 196})"
+      ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 11
+  },
+  {
+   "cell_type": "code",
    "source": [
     "# Get function name, and its arguments\n",
     "import json\n",
@@ -397,25 +398,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:20:55.144099Z",
-     "start_time": "2024-03-19T01:20:55.096891Z"
+     "end_time": "2024-07-20T01:59:19.794425Z",
+     "start_time": "2024-07-20T01:59:19.789794Z"
     }
    },
-   "id": "1b2510d1e37df5c8"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "id": "1b2510d1e37df5c8",
    "outputs": [
     {
      "data": {
-      "text/plain": "AIMessage(content='The updated string after removing the third word is: \"black yellow blue green\".\\n\\nNow, I will send the updated string to Alex via email.', additional_kwargs={'function_call': {'arguments': '{\\n  \"recipient\": \"alex@xyz.com\",\\n  \"message\": \"black yellow blue green\"\\n}', 'name': 'send_message_by_email'}}, response_metadata={'finish_reason': 'function_call', 'logprobs': None})"
+      "text/plain": [
+       "'black yellow blue green'"
+      ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 12
+  },
+  {
+   "cell_type": "code",
    "source": [
     "second_response = llm.invoke(\n",
     "    [\n",
@@ -434,32 +437,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:21:10.734964Z",
-     "start_time": "2024-03-19T01:21:08.021053Z"
+     "end_time": "2024-07-20T01:59:22.027299Z",
+     "start_time": "2024-07-20T01:59:20.958455Z"
     }
    },
-   "id": "38e57a0b05001e1c"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "id": "38e57a0b05001e1c",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sending black yellow blue green to alex@xyz.com\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "'Just sent email to alex@xyz.com'"
+      "text/plain": [
+       "AIMessage(content='', additional_kwargs={'function_call': {'arguments': '{\"message\":\"black yellow blue green\",\"recipient\":\"alex@xyz.com\"}', 'name': 'send_message_by_email'}}, response_metadata={'token_usage': {'completion_tokens': 26, 'prompt_tokens': 217, 'total_tokens': 243}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'function_call', 'logprobs': None}, id='run-18bb1686-04d3-42c3-abb0-a472071a6691-0', usage_metadata={'input_tokens': 217, 'output_tokens': 26, 'total_tokens': 243})"
+      ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 13
+  },
+  {
+   "cell_type": "code",
    "source": [
     "# Again get function name, and its arguments\n",
     "\n",
@@ -479,25 +477,34 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:21:42.340980Z",
-     "start_time": "2024-03-19T01:21:42.287391Z"
+     "end_time": "2024-07-20T01:59:23.512255Z",
+     "start_time": "2024-07-20T01:59:23.494846Z"
     }
    },
-   "id": "589d0eefbde7a441"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "id": "589d0eefbde7a441",
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending black yellow blue green to alex@xyz.com\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "AIMessage(content='I have removed the third word from the string and sent the updated string to Alex via email.', response_metadata={'finish_reason': 'stop', 'logprobs': None})"
+      "text/plain": [
+       "'Just sent email to alex@xyz.com'"
+      ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 14
+  },
+  {
+   "cell_type": "code",
    "source": [
     "third_response = llm.invoke(\n",
     "    [\n",
@@ -516,11 +523,24 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-19T01:21:57.364043Z",
-     "start_time": "2024-03-19T01:21:55.265447Z"
+     "end_time": "2024-07-20T01:59:32.927597Z",
+     "start_time": "2024-07-20T01:59:29.718343Z"
     }
    },
-   "id": "7703354b4fa031f9"
+   "id": "7703354b4fa031f9",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='I have removed the third word from the string, and I have sent the updated string to Alex via email.', response_metadata={'token_usage': {'completion_tokens': 23, 'prompt_tokens': 257, 'total_tokens': 280}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': '', 'finish_reason': 'stop', 'logprobs': None}, id='run-dfea30f6-2fea-4dfd-b99d-ac4159883ccb-0', usage_metadata={'input_tokens': 257, 'output_tokens': 23, 'total_tokens': 280})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
   },
   {
    "cell_type": "code",
