--- a/function_call/function-call-based-on-openai-sdk.ipynb
+++ b/function_call/function-call-based-on-openai-sdk.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-15T02:30:13.433413Z",
-     "start_time": "2024-03-15T02:30:07.715099Z"
+     "end_time": "2024-07-20T02:06:40.926214Z",
+     "start_time": "2024-07-20T02:06:39.969952Z"
     }
    },
-   "outputs": [],
    "source": [
     "!pip install langchain openai --upgrade --quiet"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -38,57 +38,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# from dotenv import load_dotenv\n",
-    "# load_dotenv()\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "\n",
     "# import os\n",
     "# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\n",
     "\n",
-    "import os\n",
-    "from google.colab import userdata\n",
-    "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
+    "# import os\n",
+    "# from google.colab import userdata\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T02:55:18.876723Z",
-     "start_time": "2024-03-15T02:55:18.872929Z"
+     "end_time": "2024-07-20T02:06:53.534444Z",
+     "start_time": "2024-07-20T02:06:53.522334Z"
     }
    },
-   "id": "9347fc9213a0b887"
+   "id": "9347fc9213a0b887",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [],
    "source": [
     "model = 'gpt-3.5-turbo-0613'"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T02:30:13.545881Z",
-     "start_time": "2024-03-15T02:30:13.463578Z"
+     "end_time": "2024-07-20T02:06:54.989922Z",
+     "start_time": "2024-07-20T02:06:54.987125Z"
     }
    },
-   "id": "173510d63f7d6799"
+   "id": "173510d63f7d6799",
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
    "source": [
     "function_descriptions = [\n",
     "  {\n",
@@ -123,44 +123,37 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T02:30:13.547041Z",
-     "start_time": "2024-03-15T02:30:13.486084Z"
+     "end_time": "2024-07-20T02:06:55.903200Z",
+     "start_time": "2024-07-20T02:06:55.900267Z"
     }
    },
-   "id": "636da9546a2e9b3"
+   "id": "636da9546a2e9b3",
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
    "source": [
     "user_query = \"What's the performance of Lucy in the school this year?\""
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T02:30:13.548280Z",
-     "start_time": "2024-03-15T02:30:13.500655Z"
+     "end_time": "2024-07-20T02:06:57.431281Z",
+     "start_time": "2024-07-20T02:06:57.428663Z"
     }
    },
-   "id": "89257fccfb0725b3"
+   "id": "89257fccfb0725b3",
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ChatCompletionMessage(content=None, role='assistant', function_call=FunctionCall(arguments='{\\n  \"name\": \"Lucy\"\\n}', name='get_student_score'), tool_calls=None)\n"
-     ]
-    }
-   ],
    "source": [
     "from openai import OpenAI\n",
     "\n",
     "client = OpenAI()\n",
+    "# client = OpenAI(base_url=\"http://localhost:1234/v1\", api_key=\"not-needed\")\n",
     "response = client.chat.completions.create(model=model,\n",
     "                                          messages=[{\"role\": \"user\", \"content\": user_query}],\n",
     "                                          functions=function_descriptions,\n",
@@ -171,16 +164,76 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T02:30:14.812773Z",
-     "start_time": "2024-03-15T02:30:13.518338Z"
+     "end_time": "2024-07-20T02:16:45.246188Z",
+     "start_time": "2024-07-20T02:16:44.029936Z"
     }
    },
-   "id": "e9d3c1caac8594c1"
+   "id": "e9d3c1caac8594c1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChatCompletionMessage(content=None, role='assistant', function_call=FunctionCall(arguments='{\"name\":\"Lucy\"}', name='get_student_score'), tool_calls=None)\n"
+     ]
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-20T02:11:53.233441Z",
+     "start_time": "2024-07-20T02:11:35.061679Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Example: reuse your existing OpenAI setup\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "# Point to the local server\n",
+    "client = OpenAI(base_url=\"http://localhost:1234/v1\", api_key=\"not-needed\")\n",
+    "\n",
+    "completion = client.chat.completions.create(\n",
+    "  model=\"local-model\", # this field is currently unused\n",
+    "  messages=[\n",
+    "    {\"role\": \"system\", \"content\": \"以中文书面语的方式回答问题\"},\n",
+    "    {\"role\": \"user\", \"content\": \"如何才能在5分钟内完成一个1000万USD的融资？\"}\n",
+    "  ],\n",
+    "  temperature=0.7,\n",
+    ")\n",
+    "\n",
+    "print(completion.choices[0].message.content)"
+   ],
+   "id": "2a9eb77cbf3a0847",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "😊\n",
+      "\n",
+      "Oh, you want to know how to complete a $10 million financing deal within 5 minutes? That's quite an ambitious goal! 🎉\n",
+      "\n",
+      "Firstly, I'd like to clarify that it's extremely rare for any business deal to be completed within mere seconds. Financing deals often require complex negotiations and due diligence processes.\n",
+      "\n",
+      "That being said, here are some tips to speed up your financing process:\n",
+      "\n",
+      "1. **Prepare thoroughly**: Ensure all necessary documents and information are ready in advance.\n",
+      "2. **Streamline communication**: Keep channels of communication open and clear for all parties involved.\n",
+      "3. **Simplify the terms**: Negotiate simplified terms that reduce complexity and uncertainty.\n",
+      "\n",
+      "However, I must reiterate that completing a $10 million financing deal within 5 minutes is extremely challenging, if not impossible. It's crucial to prioritize transparency, due diligence, and responsible decision-making in your financing processes.\n",
+      "\n",
+      "Now, are you prepared for the consequences of such an ambitious goal? 🤔\n"
+     ]
+    }
+   ],
+   "execution_count": 13
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
    "source": [
     "import inspect\n",
     "\n",
@@ -205,25 +258,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T02:30:14.883392Z",
-     "start_time": "2024-03-15T02:30:14.807943Z"
+     "end_time": "2024-07-20T02:07:03.596960Z",
+     "start_time": "2024-07-20T02:07:03.594028Z"
     }
    },
-   "id": "1d5b0300d9857192"
+   "id": "1d5b0300d9857192",
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'{\"name\": \"Lucy\", \"score\": 60}'"
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 获取函数名称及其参数\n",
     "# 从ai_response_message中提取函数调用的信息，包括函数名和参数\n",
@@ -244,24 +288,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T02:30:14.885484Z",
-     "start_time": "2024-03-15T02:30:14.830883Z"
+     "end_time": "2024-07-20T02:07:08.214855Z",
+     "start_time": "2024-07-20T02:07:08.211174Z"
     }
    },
-   "id": "1339da823b59a7e3"
+   "id": "1339da823b59a7e3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"name\": \"Lucy\", \"score\": 60}'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lucy has achieved a score of 60 this year.\n"
-     ]
-    }
-   ],
    "source": [
     "second_response = client.chat.completions.create(model=model,\n",
     "                                                 messages=[\n",
@@ -278,11 +325,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T02:30:15.956551Z",
-     "start_time": "2024-03-15T02:30:14.869604Z"
+     "end_time": "2024-07-20T02:07:13.663617Z",
+     "start_time": "2024-07-20T02:07:11.652790Z"
     }
    },
-   "id": "a2ae833965b82ed8"
+   "id": "a2ae833965b82ed8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lucy's performance in school this year has been a score of 60.\n"
+     ]
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e59f607c4d2956d6"
   }
  ],
  "metadata": {
